# DFL2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  note.txt  requirements.txt
.github/workflows/: cmake-build-alone.yml  cmake-build-with-pm.yml  cmake.yml
cmake/: CaffeHeader.cmake  CompileTimeContent.cmake  HunterGate.cmake
cmake/Hunter/: config.cmake
cmake/Modules/: FindvecLib.cmake
dataset/CIFAR10/: ResNet20_solver.prototxt  ResNet20_train.prototxt  SimpleNet_Slim.prototext  SimpleNet_Slim_solver.prototxt  cifar10_full_train_test.prototxt  cifar10_solver.prototxt  mobile_net_v2_solver.prototxt  mobile_net_v2_train.prototxt
dataset/MNIST/: lenet_solver_memory.prototxt
lib/: BS_thread_pool.hpp  configure_file.hpp  cuda_util.hpp  memory_consumption.hpp  nadeau.hpp  os_info.hpp  performance_profiler.hpp  thread_pool.hpp  time_util.hpp  tmt_boost.hpp  util.hpp
lib/CNet/: CNet.hpp  CNet_dir.hpp  SparseMatrix.hpp
lib/crypto/: sha256.hpp
lib/dll_loader/: dll_importer.hpp
lib/ml_layer/: caffe.hpp  caffe_model_parameters.hpp  caffe_solver_ext.hpp  data_convert.hpp  fed_avg_buffer.hpp  ml_abs.hpp  model_compress.hpp  tensor_blob_like.hpp
lib/network-common/: i_p2p_node.hpp  i_p2p_node_with_header.hpp  packet_header.hpp
lib/network-libboost/: p2p.hpp  p2p_with_header.hpp  tcp_simple_client.hpp  tcp_simple_server.hpp  tcp_simple_server_with_header.hpp
py_tool/: calculate_centrality.py  calculate_herd_effect_and_graph_properties.py  calculate_probability_of_each_k_for_scale_free_network.py  calculate_scaling_curves_of_different_slopes.py  calculate_scaling_invariance.py  calculate_slope_and_intercept_for_log_log.py  convert_dfl_simulation_config_to_topology.py  data_process_lib.py  draw_accuracy_distribution.py  draw_all_plots.py  draw_analyze_model_output.py  draw_centrality.py  draw_community_and_video_snapshot.py  draw_degree_distribution.py  draw_each_column.py  draw_herd_effect_delay_from_csv.py  draw_info.py  draw_weight_csv.py  draw_weight_distribution_from_delta_weight_file.py  find_community.py  generate_simulation_matrix.py  generate_simulation_matrix_from_topology.py  generate_simulation_matrix_scale_free.py  generate_video.py  graph_centrality_of_union_can_only_increase.py  herd_effect_for_each_node_analysis.py  nx_combine_two_networks.py  nx_generate_herds_network.py  nx_generate_scale_free_network.py  nx_generate_star_network.py  nx_lib.py  nx_modify_network.py  nx_modify_rewire_network.py  nx_shift_node_name.py  script_lib.py  test_generate_d3_star1.py  verify_centrality_diversity_constant.py
py_tool/depracted/: draw_accuracy_and_weight_diff.py
py_tool/draw/: calculate_expected_accuracy_from_fusion_model_accuracy.py  draw_accuracy_and_weight_diff.py  draw_all_plots.py  draw_degree_distribution.py  draw_delta_weight.py  draw_each_column.py  draw_fusion_model.py  draw_fusion_model_accuracy.py  visualize_network.py
py_tool/draw_for_paper/: herd_effect_delay_match_practical_value_theoretical_value.py
py_tool/generate_network_topology/: generate_two_communities_and_connect.py  nx_combine_networks.py  nx_generate_low_bound_graph_from_simulator_config_files.py  nx_generate_lower_bound_graph_from_simulator_config_files.py  nx_generate_random_network.py  nx_generate_star_network.py  nx_generate_star_network_with_branches.py  nx_generate_stochastic_block_model.py  nx_generate_stochastic_block_model_with_disconnected_blocks.py  nx_generate_stochastic_block_model_with_high_accuracy_model_propagation.py  nx_lib.py  nx_modify_network.py  script_lib.py  script_set_nodes_properties.py  simulation_config_lib.py  test_generate_d3.py
py_tool/generate_simulation_matrix/: generate_simulation_matrix.py  generate_simulation_matrix_1.py  generate_simulation_matrix_2.py  generate_simulation_matrix_alpha.py  generate_simulation_matrix_conservatism.py  generate_simulation_matrix_degree.py  generate_simulation_matrix_from_topology.py  generate_simulation_matrix_from_topology1.py  generate_simulation_matrix_from_topology2.py  generate_simulation_matrix_interval_of_training_data.py  generate_simulation_matrix_lower_bound_graph.py  generate_simulation_matrix_scale_free.py  generate_simulation_matrix_scale_free_1.py  generate_simulation_matrix_scale_free_2.py  generate_simulation_matrix_scale_free_repeat.py  generate_simulation_matrix_stochastic_block_model.py  generate_simulation_matrix_training_to_averaging_ratio.py  generate_simulation_matrix_two_communities.py  run_simulation_matrix.py  simulation_device_config.py
py_tool/generate_simulation_matrix_with_stage_script/: generate_simulation_federated_learning.py  generate_simulation_high_accuracy_track.py  generate_simulation_single.py
py_tool/jupyter/: chain_network_accuracy_analysis.ipynb  from_graph_topology_to_model_composition_source.ipynb  propagate_on_single_line.ipynb
py_tool/reperform_simulations/: generate_simulation_matrix_from_existing_simulation_results.py  move_results_back.py
py_tool/theory/: averaging_different_distribution_causes_different_variance.py  calculate_probability_of_each_k_for_scale_free_network.py  calculate_scaling_curves_of_different_slopes.py  calculate_scaling_invariance.py  calculate_slope_and_intercept_for_log_log.py  graph_centrality_of_union_can_only_increase.py  the_region_of_low_variance_2d.py  the_region_of_low_variance_3d.py
py_tool/util/: memory_consumption.py  result_merge.py  result_rm_exe.py
readme/: simulator_config.json.txt
shell/: macos_dependency.sh  ubuntu_dependency.sh  zip_all_dirs.sh
tests/: CMakeLists.txt
tests/caffe_startup/: mutual_train_demo_malicious_node.cpp  mutual_train_demo_model_diff_none_iid.cpp
tests/crypto_test/: CMakeLists.txt  crypto_test_main.cpp
tests/json_test/: CMakeLists.txt  json_test_main.cpp
tests/miscellaneous_test/: CMakeLists.txt  miscellaneous_test_main.cpp  miscellaneous_test_main_no_boost.cpp
tests/ml_abs_test/: CMakeLists.txt  test_caffe.cpp  test_memory_data_layer.cpp
tests/network_libboost_test/: CMakeLists.txt  test_boost_network.cpp  test_network_libboost_p2p.cpp
tests/rocksdb_test/: CMakeLists.txt  (+1 more)
(+8 files in other folders)
